# quanta-color

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  ROADMAP.md  SECURITY.md  USAGE.md  pyproject.toml  quanta-color.spec  quanta_color.spec
.claude/hooks/: block-secrets.py
.github/workflows/: ci.yml
build_color/: image_io.py  lut_io.py
build_color/gui/: app.py
build_color/gui/pages/: color_inspector.py  lut_workshop.py
build_color/gui/widgets/: tone_curve.py
docs/: ENTERPRISE-READINESS.md
docs/brand/: README.md
examples/: demo.py
quanta_color/: __init__.py  adaptation.py  appearance.py  blindness.py  cli.py  difference.py  gamut.py  harmony.py  icc.py  image_analysis.py  image_io.py  lut_io.py  naming.py  spaces.py  spectral.py  tonemap.py
quanta_color/gui/: __init__.py  app.py
quanta_color/gui/pages/: color_inspector.py  dashboard.py  image_analyzer.py  lut_workshop.py  palette_studio.py  settings.py
quanta_color/gui/widgets/: color_swatch.py  tone_curve.py
tests/: test_adaptation.py  test_blindness.py  test_difference.py  test_gamut.py  test_harmony.py  test_lut_io.py  test_naming.py  test_spaces.py  test_spectral.py  test_tonemap.py
