[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quanta-color"
version = "1.0.0"
description = "Professional color science library — tone mapping, color spaces, gamut mapping, HDR, spectral rendering"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    { name = "Zain Dana Harper" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

[project.scripts]
quanta-color = "quanta_color.cli:main"

[project.optional-dependencies]
gui = ["PyQt6>=6.5,<7"]
all = ["scipy>=1.10,<2", "Pillow>=10.0,<11", "PyQt6>=6.5,<7"]

[tool.setuptools.packages.find]
include = ["quanta_color*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
