[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quanta-color"
version = "1.0.0"
description = "Python color-science workbench for HDR tone mapping, appearance models, Delta E, spectral, ICC, and LUT workflows"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Zain Dana Harper" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/HarperZ9/quanta-color"
Repository = "https://github.com/HarperZ9/quanta-color"
Issues = "https://github.com/HarperZ9/quanta-color/issues"

[project.scripts]
quanta-color = "quanta_color.cli:main"

[project.optional-dependencies]
gui = ["PyQt6>=6.5,<7", "quanta-ui>=1.0.0"]
all = ["scipy>=1.10,<2", "Pillow>=10.0,<11", "PyQt6>=6.5,<7"]

[tool.setuptools.packages.find]
include = ["quanta_color*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "I",     # isort
]
ignore = ["E501", "E701", "E702", "E741", "B905", "SIM102", "SIM105", "SIM108", "SIM112", "SIM117", "E402", "SIM113", "SIM115"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional in __init__ files

[tool.ruff.format]
quote-style = "double"
